# gerrit-mcp

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  Makefile  README.md  config.py  pyproject.toml  server.py  smithery.yaml
.changeset/: inline-comments-feature.md  mcp-1-12-4-compatibility.md  mcp-compatibility-and-enhanced-gerrit-support.md  testcontainers-migration.md
rpm/SPECS/: gerrit-review-mcp.spec
src/: server.py
src/gerrit_review_mcp/: __init__.py  config.py  server.py
tests/: README.md  __init__.py  conftest.py  setup.sh  test_auth_config.py  test_docker_integration.py  test_draft_comments.py  test_inline_comments.py  test_ssl_config.py  test_submit_review.py
